welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:3: error: Invalid literal number
	else if (a+b==b+c+10 || a+b==a+c+1à) return 5
                                         ^blueTicket:5: error: illegal start of simple expression
} 
^